--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "lucide-react": "^0.556.0",
     "mongodb": "^7.1.0",
     "next": "16.0.8",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0",
+    "tailwind-merge": "^3.4.1",
     "ts-node": "^10.9.2",
     "uuid": "^13.0.0",
     "zod": "^4.1.13"
@@ -44,11 +46,13 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.9.19",
     "dotenv": "^17.2.4",
     "dotenv-cli": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
     "prisma": "^7.3.0",
+    "shadcn": "^3.8.5",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
